Add Basic components with create, read, and delete

--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,78 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul {
+  width: 80%;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 10px
+}
+
+li{
+  padding: 8px 16px;
+  display: grid;
+  grid-template-columns: 1fr 10fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  border-radius: 10px;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.12), 
+  0 2px 2px rgba(0,0,0,0.12), 
+  0 4px 4px rgba(0,0,0,0.12), 
+  0 8px 8px rgba(0,0,0,0.12),
+  0 16px 16px rgba(0,0,0,0.12);
+  justify-content: start;  
+  column-gap: 12px;
+}
+
+li h3 {
+  grid-row: 1/2;
+  grid-column: 2/3;
+  align-self: flex-start;
+  text-align: start;
+  margin: 8px
+}
+li p {
+  grid-row: 3/4;
+  grid-column: 2/3;
+  text-align: start;
+  margin: 4px
+}
+
+li input {
+  grid-column: 1/2;
+  grid-row: 2/3
+}
+
+li button {
+  grid-column: 3/4;
+  grid-row: 2/3;
+}
+
+li button:last-child{
+  grid-column: 4/5;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  gap: 12px;
+}
+
+form label {
+  text-align: initial;
+}
+
+button {
+  background-color: seagreen;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 4px;
+}
+button:focus {
+  outline:  2px solid blue;
+
+}
